# quibble

./: bitcamp.cabal  nohup.out  stack.yaml
.stack-work/install/x86_64-linux/lts-5.11/7.10.3/flag-cache/: HTTP-4000.3.3-277d4135228c2c730d2aeaa9044e6e66  HUnit-1.3.1.1-9ae4c2f31abd33c594f24f181b5de86a  JuicyPixels-3.2.7-ea64a73602300c0ed0b1acd16698272b  MonadCatchIO-transformers-0.3.1.3-3f6f0733eb64c0e4246e2d61a80858c5  MonadRandom-0.4.2.2-691aae9835a77d3a54e42e47558ac2d7  SHA-1.6.4.2-77809b6ff18053a556c8f0a1e4b17672  StateVar-1.1.0.3-8283c9355d2fc1ad397281acceca5467  adjunctions-4.3-e6b8537af59b6422c6594e3e1dfb2b40  aeson-0.9.0.1-0fbecffa89145650771f6d91180bc906  asn1-encoding-0.9.3-5a82acfe7bb08b86630b16ae48e8ca46  asn1-parse-0.9.4-43c5a0485bd62983c62e2c30ee6931ed  asn1-types-0.3.2-23b6c4938888e3e1a32437136f9ef98e  async-2.1.0-033e4fae4da028fc2d6502bd36e5e5a1  attoparsec-0.13.0.1-03e5f4d30af6e283e5557f32f8294b36  attoparsec-enumerator-0.3.4-a6ce2cb0f44718eb68b777277bda7048  base-orphans-0.5.3-d2110f3b0d07b67c48bf5cca13f2d1ca  base64-bytestring-1.0.0.1-7a1d6278262346143ad180321424ea8b  bifunctors-5.2-0416f26ed4da36f1480d10889e4b4efa  blaze-builder-0.4.0.1-dc47e0329d193545745520e387e071ae  blaze-builder-enumerator-0.2.1.0-e591906f98f8b0964599bd34638c7b0e  blaze-html-0.8.1.1-8db6f8f6a51008fcea440d050df2157f  blaze-markup-0.7.0.3-a91851c03b4027095b4d8f7afe44ec3f  byteable-0.1.1-8a1589926445fd8ccaca02ef701a2633  bytestring-builder-0.10.6.0.0-8aa4073730c676dbe210ea8bffd8d092  bytestring-mmap-0.2.2-ecde3edde6b3b4c0be977f8c5136b620  case-insensitive-1.2.0.6-e1ac0806b5a4ca856f8ea8e8274c44ec  cereal-0.5.1.0-b8a30f8877fa63f4f84ceceaab55715e  cipher-aes-0.2.11-bc47d494279f9c8cf719a4ca4238d34f  clientsession-0.9.1.1-1f9ac7332d5aaf9253e71ef7403cfe61  (+116 more)
app/backend/: Application.hs  Main.hs  Site.hs
app/frontend/: bower.json  bower.json~  package.json
app/frontend/app/: index.html  index.html~
app/frontend/app/bower_components/angular/: bower.json~
app/frontend/app/clues/: question1.json  question1.json~  question2.json  question2.json~
app/frontend/app/css/: app.css
app/frontend/app/js/: app.js  controllers.js  controllers.js~  services.js  services.js~
app/frontend/app/partials/: phone-detail.html~
app/packet-parser/: Main.hs
snaplets/postgresql-simple/: devel.cfg
(+28 files in other folders)
